@@ -68,7 +68,7 @@ OBJS=$(SRCS:.c=.o)
 LIB=$(MODULE).so.1
 
 # uncomment NSFLAGS if you are using the Netscape SDK
-#NSFLAGS=-I/usr/local/ldapsdk/include -DLDAP_VERSION3_API
+#NSFLAGS=-I/usr/local/ldapsdk/include -DLDAP_VERSION3_API -DRFC2307BIS
 
 # uncomment GNUFLAGS if you are building a GNU glibc-2.x module
 #GNUFLAGS=-DGNU_NSS
